# murmuration

./: .gitignore  ABOUT_MESSAGES.md  CHANGELOG.md  Cargo.toml  DAILY_CHECKLIST.md  Dockerfile  INSTALL.md  LICENSE  MIT_PORTFOLIO_ASSESSMENT.md  Makefile  QUICKSTART.md  QUICK_START.md  README.md  ROADMAP.md  STEP_BY_STEP.md  STRUCTURE.md  SUMMARY_RU.md  TESTING.md  docker-compose.yml
.github/workflows/: ci.yml  packages.yml  pages.yml  release.yml  rust.yml
browser-extension/: ICONS.md  INSTALL.md  README.md  SETUP_HOSTS.md  background.js  content.js  create_icons.sh  manifest.json  popup.html  popup.js
core/: Cargo.toml
core/benches/: routing.rs
core/src/: api.rs  bundle.rs  cli_app.rs  config.rs  contact_store.rs  content_store.rs  e2e.rs  error.rs  group.rs  identity.rs  lib.rs  main.rs  message_store.rs  messenger_api.rs  messenger_types.rs  naming.rs  node.rs  peer_store.rs  trace.rs  url_handler.rs  web_gateway.rs
core/src/ai/: adapter.rs  mod.rs  router.rs  routing_logger.rs  stats_collector.rs
core/src/elysium/: mod.rs  packet.rs
core/src/murmuration/: packet.rs
core/src/nat/: hole_punch.rs  mod.rs  relay.rs  stun.rs
core/src/onion/: cell.rs  circuit.rs  mod.rs  relay.rs
core/src/p2p/: discovery.rs  encryption.rs  encryption_pqc.rs  mod.rs  peer.rs  protocol.rs  routing.rs
core/src/transport/: mod.rs
core/src/transport/obfs/: mod.rs  obfs4.rs  tls.rs
core/src/utils/: event_emitter.rs  mod.rs
core/tests/: core_tests.rs  test_forward_secrecy.rs  test_handshake_pqc.rs  test_multi_node.rs  test_nat_stun.rs  test_obfs_tls.rs  test_onion.rs  test_routing_adaptive.rs  test_stability.rs
crates/murmuration-routing/: Cargo.toml  README.md
crates/murmuration-routing/src/: error.rs  lib.rs  peer.rs  router.rs  routing_logger.rs  stats.rs  trace.rs
demo/: README.md
docs/: ARCHITECTURE.md  CURRENT_STATE.md  DEMO.md  FIX_PORT_OVERRIDE.md  MULTI_MAC_SETUP.md  MULTI_NODE_SETUP.md  MVP_CONFERENCE_CHECKLIST.md  MVP_FINAL_CHECKLIST.md  MVP_STATUS.md  PROTOCOL.md  QUICKSTART.md  QUICK_FIX_API_PORT.md  Q_ROUTING.md  TEST_MULTI_NODE.md  TROUBLESHOOTING.md  VIDEO_DEMO_PLAN.md  VIDEO_DEMO_SCRIPT.md  roadmap.md
logs/: ai_routing_logs.jsonl
paper/: OUTLINE.md  README.md  murmuration.tex  refs.bib
python_cli/: QUICKSTART_TUI.md  README.md  advanced_tui.py  cli.py  requirements.txt  run.sh  tui.py
results/: RESULTS.md  benchmark.csv  benchmark_grid.csv  benchmark_zipf0.0.csv  benchmark_zipf0.8.csv  benchmark_zipf1.2.csv  benchmark_zipf1.2_150k.csv  benchmark_zipf1.2_s10.csv  make_figures.py  sweep.csv  sweep.sh  trace_bench.csv
scripts/: ci_check.sh  demo_local.sh  deploy_site.py  generate_keys.rs  start_demo_nodes.sh  start_nodes.sh  start_web.sh  stress_test_network.rs  test_ai_routing.sh  test_connection.sh  test_stability.sh
sites/site_id_1/: index.html  script.js  style.css
sites/site_id_2/: index.html
tests/: ai_tests.rs  cli_tests.py  core_tests.rs
tron-viz/: Cargo.toml
tron-viz/src/: main.rs
web/backend/: app.py
web/frontend/: README.md  index.html
web/frontend/assets/: app.js  style.css
