[package]
name = "meshlink_core"
version = "0.1.0"
edition = "2021"
default-run = "core"

[lib]
name = "meshlink_core"
path = "src/lib.rs"
doctest = false


[[bin]]
name = "core"
path = "src/main.rs"

[[bin]]
name = "viz"
path = "src/bin/viz.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "ely"
path = "src/bin/ely.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
crossterm = "0.27"
ratatui = "0.27"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.5"
rsa = { version = "0.9", features = ["sha2"] }
aes-gcm = { version = "0.10", features = ["aes"] }
sha2 = "0.10"
base64 = "0.21"
bs58 = "0.5"
colored = "2.1"
socket2 = "0.5"
sled = "0.34"
# Post-Quantum Cryptography - using pqcrypto-kyber 0.8.1 (more stable)
pqcrypto-kyber = { version = "0.8", optional = true }
pqcrypto-traits = { version = "0.3", optional = true }

[features]
default = []
pqc = ["pqcrypto-kyber", "pqcrypto-traits"]